fix: adjust z-index for overlay to ensure proper stacking order (#93)

--- a/src/app/main/board/board.scss
+++ b/src/app/main/board/board.scss
@@ -23,6 +23,7 @@
 	align-items: center;
 	inset: 0;
 	backdrop-filter: blur(2px);
+	z-index: 100;
 }
 
 .container {
